--- a/src/components/Upload Page/Upload.css
+++ b/src/components/Upload Page/Upload.css
@@ -2,7 +2,7 @@
     background-color: #3C0F4B;
     color: #fff;
     border: none;
-    margin: 15px 0 0 0;
+    margin: 160% 0 0 0;
     border-radius: 20px;
     cursor: pointer;
     text-decoration: none;
@@ -28,14 +28,14 @@
 .info-form {
     width: 100%;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     padding: 20px;
 }
 
 .info-form input {
     padding: 20px;
-    height: 25%;
+    height: 100%;
+    max-height: 85px;
     border-radius: 15px;
     margin-bottom: 5%;
     background-color: #494949;
@@ -82,6 +82,7 @@
     justify-content: center;
     padding:3% 3% 3% 0;
     height: 100%;
+    position: relative;
 }
 
 
@@ -124,6 +125,12 @@
 
 .centered-text, .lower-centered-text {
     pointer-events: none; /* Esto evitará que estos elementos intercepten eventos de arrastre */
+}
+
+.next-btn-img {
+    padding-bottom: 12%;
+    max-width: 100%; /* Ajusta este valor según tus necesidades */
+    max-height: 100%; /* Ajusta este valor según tus necesidades */
 }
 
 
