--- a/src/components/Upload Page/Upload.css
+++ b/src/components/Upload Page/Upload.css
@@ -2,7 +2,7 @@
     background-color: #3C0F4B;
     color: #fff;
     border: none;
-    margin: 160% 0 0 0;
+    margin: 45% 0 0 20%;
     border-radius: 20px;
     cursor: pointer;
     text-decoration: none;
@@ -14,7 +14,7 @@
     height: 130px;
 }
 .next-btn:hover{
-    color: white;
+    background-color: #3C0F4B;
 }
 
 
@@ -33,16 +33,14 @@
 }
 
 .info-form input {
-    padding: 20px;
-    height: 100%;
-    max-height: 85px;
+    padding: 25px;
     border-radius: 15px;
-    margin-bottom: 5%;
+    margin-top: 5%;
     background-color: #494949;
     color: white;
     border-width: 0;
+    max-height: 75px;
 }
-
 .image-container {
     cursor: pointer;
     position: relative;
@@ -69,8 +67,6 @@
 }
 
 
-
-
 .beat-info {
     display: flex;
     justify-content: center;
@@ -87,13 +83,6 @@
 
 
 .select {
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    border-radius: 15px;
-    margin-bottom: 5%;
-    background-color: #494949;
-    height: 10%;
 }
 
 .centered-text {
@@ -114,14 +103,6 @@
     text-align: center;
 }
 
-.select-container {
-    overflow-block: scroll;
-}
-
-.select-container .select__menu-list {
-    direction: ltr;
-    overflow: scroll;
-}
 
 .centered-text, .lower-centered-text {
     pointer-events: none; /* Esto evitará que estos elementos intercepten eventos de arrastre */
@@ -133,4 +114,104 @@
     max-height: 100%; /* Ajusta este valor según tus necesidades */
 }
 
+.next-form {
+    justify-content: center;
+    padding-top: 3%;
+}
+
+.checkbox {
+    margin-right: 15px;
+}
+
+.checkbox:hover {
+    cursor: pointer;
+}
+
+.checkboxes {
+    padding-top: 15%;
+    padding-left: 20%;
+    align-content: center;
+}
+
+.termsTxt, .copyrightTxt {
+    font-family: "Roboto Light", serif;
+    color: white;
+    font-size: 20px;
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 28px;
+}
+
+.termsCheckbox, .copyrightCheckBox {
+    justify-self: center;
+    align-self: center;
+    margin-bottom: 5%;
+    display: flex;
+}
+
+.userBtn {
+    display: flex;
+    justify-content: center;
+    vertical-align: center;
+    align-self: center;
+    font-family: "Roboto Light";
+    text-decoration: none;
+    color: #fff;
+    margin-right: 50px;
+}
+.userBtn:hover {
+    text-decoration: none;
+    color: #8731E4;
+}
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.rti--container {
+    --rti-bg: #494949 !important;
+    --rti-border: none !important;
+    --rti-main: transparent !important;
+    --rti-radius: 15px !important;
+    --rti-s: 5px !important; /* spacing */
+    --rti-tag: #3C0F4B !important;
+    --rti-tag-remove: #F04438 !important;
+    padding-left: 15px !important;
+    min-height: 75px;
+    margin-top: 5%;
+    color: white;
+    border-width: 0;
+}
+.rti--tag button {
+    margin-left: 5% !important;
+    color: white !important;
+    background-color: #3C0F4B !important;
+    max-width: 50% !important;
+    font-size: 60% !important;
+    font-weight: bold !important;
+    line-height: normal !important;
+
+}
+.rti--tag button:hover {
+    color: #F04438 !important;
+    background-color: #3C0F4B !important;
+}
+.rti--tag {
+    padding-left: 10px !important;
+    margin-right: 0 !important;
+    border-radius: 10px !important;
+    font-size: 14px !important;
+}
+.rti--input {
+    padding: 0 !important;
+    height: unset !important;
+    border-radius: 0 !important;
+    margin-top: 0 !important;
+    background-color: #494949;
+    color: white;
+    border-width: 0 !important;
+
+}
 
