--- a/src/components/Upload Next Page/UploadNext.css
+++ b/src/components/Upload Next Page/UploadNext.css
@@ -8,22 +8,47 @@
     text-decoration: none;
     display: flex;
     justify-content: center;
-    padding-top: 40px;
+    align-items: center;
     font-size: 28px;
-    width: 300px;
-    height: 115px;
+    width: 100%;
+    min-height: 100px;
+    height: auto;
 }
 .upload-btn:hover{
     color: white;
 }
 
-
-.next-drop-beat {
-    display: flex;
-    margin: 2%;
-    align-self: center;
-    width: 100%; /* Ocupa todo el ancho disponible */
+.selected-image {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    object-position: center;
 }
+
+
+.remove-image-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: red;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    cursor: pointer;
+}
+
+.next-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+
 
 .next-info-form {
     width: 70%;
@@ -47,22 +72,21 @@
     display: flex;
     margin: 2%;
     width: 100%;
-    min-height: 600px;
+    min-height: 360px;
+    height: 100%;
     background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='25' ry='25' stroke='%23A5A5A5FF' stroke-width='10' stroke-dasharray='30%2c50' stroke-dashoffset='900' stroke-linecap='square'/%3e%3c/svg%3e");
     border-radius: 25px;
 }
 
 .next-caption {
     border-radius: 20px;
-    width: 300px;
-    height: 400px;
+    min-width: 500px;
+    width: 100%;
     background: #A5A5A5;
     padding: 20px;
     resize: none;
     border: none;
 }
-
-
 
 
 .next-beat-info {
@@ -74,7 +98,7 @@
 .next-caption-and-button {
     display: flex;
     justify-content: center;
-    padding:3% 3% 3% 0;
+    padding:3%;
     width: 100%;
 }
 
@@ -96,6 +120,23 @@
 .next-select-container .select__menu-list {
     direction: ltr;
     overflow: scroll;
+}
+
+.next-drop-pic {
+    display: flex;
+padding: 3%;
+    width: 100%; /* Ocupa todo el ancho disponible */
+
+}
+
+.selected-image {
+    width: 100%;
+    height: 100%;
+    max-height: 600px;
+    object-fit: contain;
+    object-position: center;
+    border: 8px solid white;
+    border-radius: 25px;
 }
 
 
