--- a/src/components/Upload Page/Upload.css
+++ b/src/components/Upload Page/Upload.css
@@ -12,6 +12,7 @@
     font-size: 28px;
     width: 300px;
     height: 130px;
+    align-items: center;
 }
 .next-btn:hover{
     background-color: #3C0F4B;
@@ -56,15 +57,6 @@
     background-color: rgba(255, 255, 255, 0.15); /* Cambia esto al color que quieras */
 }
 
-.caption {
-    border-radius: 20px;
-    width: 300px;
-    height: 400px;
-    background: #A5A5A5;
-    padding: 20px;
-    resize: none;
-    border: none;
-}
 
 
 .beat-info {
@@ -114,10 +106,6 @@
     max-height: 100%; /* Ajusta este valor según tus necesidades */
 }
 
-.next-form {
-    justify-content: center;
-    padding-top: 3%;
-}
 
 .checkbox {
     margin-right: 15px;
