--- a/src/components/Upload Next Page/UploadNext.css
+++ b/src/components/Upload Next Page/UploadNext.css
@@ -30,7 +30,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    background: red;
+    background: transparent;
     color: white;
     border: none;
     border-radius: 50%;
@@ -39,6 +39,8 @@
     text-align: center;
     line-height: 30px;
     cursor: pointer;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .next-form {
@@ -72,7 +74,8 @@
     display: flex;
     margin: 2%;
     width: 100%;
-    min-height: 360px;
+    min-height: 400px;
+    max-height: 400px;
     height: 100%;
     background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='25' ry='25' stroke='%23A5A5A5FF' stroke-width='10' stroke-dasharray='30%2c50' stroke-dashoffset='900' stroke-linecap='square'/%3e%3c/svg%3e");
     border-radius: 25px;
@@ -86,6 +89,7 @@
     padding: 20px;
     resize: none;
     border: none;
+    font-size: 24px;
 }
 
 
@@ -138,5 +142,15 @@ padding: 3%;
     border: 8px solid white;
     border-radius: 25px;
 }
+
+.lower-centered-text-shadow {
+    text-shadow: 2px 2px 5px #555;
+    font-weight: bold;
+    font-size: 24px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
+
+
 
 
