--- a/src/Screens/DashboardPage/Dashboard.css
+++ b/src/Screens/DashboardPage/Dashboard.css
@@ -4,7 +4,7 @@
 }
 
 .content {
-    display: flex;
+    width: 100%;
     margin-left: 100px; /* Añade margen izquierdo para evitar la superposición */
     padding: 20px; /* Añade padding para separar el contenido del borde */
     flex-grow: 1; /* Permite que el contenido principal ocupe el resto del espacio */
@@ -18,9 +18,7 @@
 
 .card {
     /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    max-width: 300px;
     border-radius: 25px !important;
     padding: 15px;
     margin: 20px 20px 20px 0;
@@ -34,16 +32,16 @@
     cursor: pointer;
 }
 
+.post-picture {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 20px;
+}
 .section-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-}
-
-.card img {
-    width: 100%;
-    height: auto;
-    border-radius: 20px;
 }
 
 .card h4, .card p {
@@ -52,17 +50,53 @@
 }
 
 .uploadButton {
+    z-index: 1000;
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
     background-color: #350e3c;
     color: #fff;
     border: none;
-    padding: 20px;
     margin: 10px;
-    border-radius: 20px;
+    border-radius: 100%;
     cursor: pointer;
-    font-size: 54px;
+    font-size: 72px;
     transition: background-color 0.3s;
+    width: 150px;
+    height: 150px;
+    box-shadow: 0 10px 10px rgb(0, 0, 0);
+}
+.clock-and-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 7%;
+
+
+}
+
+.dash-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.rt-clock {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    margin-right: 6%;
+    font-size: 76px;
+
 }
 
 .uploadButton:hover {
     background-color: #8731E4;
+}
+
+.section-container {
+    scrollbar-color: #888 #f5f5f5; /* Cambia el color de la barra de desplazamiento */
+    justify-content: start;
+    max-width: 100%;
 }
