--- a/src/Screens/UploadScreens/Upload.css
+++ b/src/Screens/UploadScreens/Upload.css
@@ -375,6 +375,15 @@ input[type=number]::-webkit-inner-spin-button {
     transform: translateY(0);
 }
 
+.centerDiv-Upload {
+    display: flex;
+    margin: 3%;
+    background-color: #161616;
+    justify-content: center;
+    border-radius: 30px;
+    width: 100%;
+}
+
 .transition-leave {
     opacity: 1;
     transform: translateY(0);
@@ -387,6 +396,8 @@ input[type=number]::-webkit-inner-spin-button {
 
 
 .tabs {
+    position: absolute;
+    bottom: 5%;
     justify-self: center;
     justify-content: center;
     margin-top: -2%;
