--- a/src/Screens/Landing Page/LandingPage.css
+++ b/src/Screens/Landing Page/LandingPage.css
@@ -6,8 +6,23 @@ html {
 
 
 .tryDiv {
-    margin: 50px 0 50px 0;
+    margin-top: 8%;
+}
 
+.qr-pic {
+    margin-top: 5%;
+    max-width: 250px;
+    height: auto;
+}
+
+.frame {
+    justify-self: start;
+    align-self: start;
+
+}
+
+.qr-pic:hover {
+    cursor: pointer;
 }
 
 
@@ -35,6 +50,7 @@ main {
     margin: 3%;
     background-color: #161616;
     border-radius: 30px;
+    justify-content: space-between;
 }
 
 section {
@@ -62,6 +78,11 @@ section {
     text-align: center;
     width: 50%;
     max-width: 30%;
+    align-self: center;
+}
+
+.h4-landing {
+    margin-bottom: 30px;
 }
 
 .contentLanding h1 {
